# BachelorsProject

./: .gitignore  CLAUDE.md  PLACEHOLDERS_TODO.md  README.md  TODO.md  aggregate_final_metrics.py  benchmark_inference.py  eval_encoder_final.json  eval_encoder_persubject.json  eval_tcn_persubject.json  inference_benchmark_tcn.json  main.py  optuna.db  optuna_rmse.db  plot_accel_gait_cycle.py  plot_activity_rmse.py  plot_gonio_gait_cycle.py  plot_gyro_gait_cycle.py  plot_loso_split.py  plot_results.py  plot_right_knee.py  plot_rmse_over_horizon.py  plot_split.py  plot_windowing_diagram.py  pyproject.toml  requirements.txt  slurm-28696886.out  slurm-28697035.out
.claude/: CLAUDE.md
analysis/: analyze_data.py  analyze_dataset.py  data_io.py  plot_balance.py  plot_correlations.py  plot_distributions.py  plot_knee_angle.py  plot_knee_angles.py  plot_overview.py  plot_stats_table.py  plot_timeseries.py  signal_statistics.csv  visualize_model.py
conf/: config.yaml
conf/benchmark/: default.yaml
conf/dataset/: enabl3s.yaml
conf/experiment/: encoder_100hz_right.yaml  hminmax_feat10_tcnhead.yaml  tcn_100hz_right.yaml  tcn_50hz_right.yaml  timesnet_100hz_both.yaml  timesnet_100hz_right.yaml  timesnet_50hz_both.yaml  timesnet_50hz_right.yaml
conf/gpu/: default.yaml
conf/hparam_search/: default.yaml
conf/model/: default.yaml  (+2 more)
paper/: conclusion_section_draft.tex  discussion_section_draft.tex  introduction.tex  materials.tex  method.tex  results_section_draft.tex
src/: dataloader.py  dataset.py  logging_utils.py  preprocessing.py  preprocessing_hdf5.py  runtime.py
(+67 files in other folders)
